k8s-webhook-server/serving-certs/ValidatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: kubevela
    meta.helm.sh/release-namespace: vela-system
  name: kubevela-vela-core-admission
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVYVJmM1JEcHY2MGU1czR3NU5HM2dOdXZQTUZBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tWMlZpYUc5dmF5QkRRVEFlRncweU5UQTBNamd3TmpNeE1UbGFGdzB6TlRBMApNall3TmpNeE1UbGFNQlV4RXpBUkJnTlZCQU1NQ2xkbFltaHZiMnNnUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFET0d3eENKZVhnV0dJMjJ6WngyNUl3bFBjL2hsbFE3YVZMZXdaNDU2Z2wKSGJXWUpFZ1djdVlWbTMyc1RXRGZsQ3B5bTFucjRtWkplSXpUU2p4ODRDbEZ0bFNFcENaM1pBanFhYVIvN2VrUQp4cVcyWitNWkVq [...]
      url: "https://192.168.0.100:9445/validating-core-oam-dev-v1beta1-traitdefinitions"
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validating.core.oam.dev.v1beta1.traitdefinitions
    namespaceSelector: { }
    objectSelector: { }
    rules:
      - apiGroups:
          - core.oam.dev
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - traitdefinitions
        scope: '*'
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVYVJmM1JEcHY2MGU1czR3NU5HM2dOdXZQTUZBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tWMlZpYUc5dmF5QkRRVEFlRncweU5UQTBNamd3TmpNeE1UbGFGdzB6TlRBMApNall3TmpNeE1UbGFNQlV4RXpBUkJnTlZCQU1NQ2xkbFltaHZiMnNnUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFET0d3eENKZVhnV0dJMjJ6WngyNUl3bFBjL2hsbFE3YVZMZXdaNDU2Z2wKSGJXWUpFZ1djdVlWbTMyc1RXRGZsQ3B5bTFucjRtWkplSXpUU2p4ODRDbEZ0bFNFcENaM1pBanFhYVIvN2VrUQp4cVcyWitNWkVq [...]
      url: "https://192.168.0.100:9445/validating-core-oam-dev-v1beta1-applications"
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validating.core.oam.dev.v1beta1.applications
    namespaceSelector: { }
    objectSelector: { }
    rules:
      - apiGroups:
          - core.oam.dev
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - applications
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVYVJmM1JEcHY2MGU1czR3NU5HM2dOdXZQTUZBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tWMlZpYUc5dmF5QkRRVEFlRncweU5UQTBNamd3TmpNeE1UbGFGdzB6TlRBMApNall3TmpNeE1UbGFNQlV4RXpBUkJnTlZCQU1NQ2xkbFltaHZiMnNnUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFET0d3eENKZVhnV0dJMjJ6WngyNUl3bFBjL2hsbFE3YVZMZXdaNDU2Z2wKSGJXWUpFZ1djdVlWbTMyc1RXRGZsQ3B5bTFucjRtWkplSXpUU2p4ODRDbEZ0bFNFcENaM1pBanFhYVIvN2VrUQp4cVcyWitNWkVq [...]
      url: "https://192.168.0.100:9445/validating-core-oam-dev-v1beta1-componentdefinitions"
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validating.core.oam.dev.v1beta1.componentdefinitions
    namespaceSelector: { }
    objectSelector: { }
    rules:
      - apiGroups:
          - core.oam.dev
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - componentdefinitions
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVYVJmM1JEcHY2MGU1czR3NU5HM2dOdXZQTUZBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tWMlZpYUc5dmF5QkRRVEFlRncweU5UQTBNamd3TmpNeE1UbGFGdzB6TlRBMApNall3TmpNeE1UbGFNQlV4RXpBUkJnTlZCQU1NQ2xkbFltaHZiMnNnUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFET0d3eENKZVhnV0dJMjJ6WngyNUl3bFBjL2hsbFE3YVZMZXdaNDU2Z2wKSGJXWUpFZ1djdVlWbTMyc1RXRGZsQ3B5bTFucjRtWkplSXpUU2p4ODRDbEZ0bFNFcENaM1pBanFhYVIvN2VrUQp4cVcyWitNWkVq [...]
      url: "https://192.168.0.100:9445/validating-core-oam-dev-v1beta1-policydefinitions"
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validating.core.oam.dev.v1beta1.policydefinitions
    namespaceSelector: { }
    objectSelector: { }
    rules:
      - apiGroups:
          - core.oam.dev
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - policydefinitions
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
